--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "@vitejs/plugin-vue-jsx": "^2.1.1",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "bootstrap": "^5.2.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.56.1",
     "vite": "^3.2.4"
   }
 }
